Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-9653

Impala shouldn't create/remove staging directory during transactional INSERTs

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.0.0
    • None
    • ghx-label-9

    Description

      Transactional INSERTs write their data into their final location, so there is no need to create and remove a staging directory.

      Attachments

        Issue Links

          Activity

            People

              boroknagyz Zoltán Borók-Nagy
              boroknagyz Zoltán Borók-Nagy
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: