IMPALA-9653: Impala shouldn't create/remove staging directory during transactional INSERTs

This commit eliminates an unnecessary hdfsDelete() call for INSERT-only
tables. For such tables we don't create a staging directory, hence there
is nothing to delete. It also eliminates a confusing log message about
the deletion of the staging directory (which did not even exist).

I also added a DCHECK to check that we don't even set the staging
directory for such tables.

Change-Id: Ie6a3a502fb3b3cfe7a68323d3b0145e5fb149460
Reviewed-on: http://gerrit.cloudera.org:8080/15737
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>